# CO-MP-UT-ER

./: .gitignore  Cargo.toml  README.md  README_zh.md  build.rs  config.json
locales/: en.json  ja.json  zh.json
src/: config.rs  event_monitor.rs  i18n.rs  main.rs  settings_ui.rs  startup.rs  tts_engine.rs
