[package]
name = "advanced_prompts"
version = "0.1.0"
edition = "2021"

[dependencies]
tts = "0.26.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
simple-logging = "2.0.2"
lazy_static = "1.4.0"
tokio = { version = "1.32", features = ["full"] }

# 確保版本號和所有特性名稱都完全正確
windows = { version = "0.61.3", features = [
    # Win32 Features
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Devices_Usb",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_WindowsProgramming",
    
    # WinRT Features
    "System",
    "Devices_Power",
    "Foundation",
    "Networking_Connectivity",
    "ApplicationModel",
    "ApplicationModel_Core",
] }