[package]
name = "co_mp_ut_er"
version = "0.1.0"
edition = "2021"

[dependencies]
tts = "0.26.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.27"
simple-logging = "2.0.2"
lazy_static = "1.5.0"
tokio = { version = "1.47", features = ["full"] }
winreg = "0.55"
once_cell = "1.21"
sys-locale = "0.3"

# 確保版本號和所有特性名稱都完全正確
windows = { version = "0.61", features = [
    # Win32 Features
    "Win32_UI_Controls", 
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_Devices_Usb",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Input_KeyboardAndMouse",

    
    # WinRT Features
    "System",
    "Devices_Power",
    "Foundation",
    "Networking_Connectivity",
    "ApplicationModel",
    "ApplicationModel_Core",
] }

[build-dependencies]
embed-resource = "2.4"
